# 2526-4ahitm-franklyn

./: .dockerignore  .envrc  .gitignore  AGENTS.md  LICENSE  README.md  VERSION  answers.md  answers2.md  answers3.md  codecov.yml  enter-env.sh  flake.nix  flow.spec.md  folgefragen.md  folgefragen2.md  folgefragen4.md  fragen.md  package.json  session-ses_1f89.md  session-ses_codec_1.md  session-ses_codec_2.md  session-ses_codec_final_1.md  session-ses_codec_final_2.md  session-ses_codec_final_3.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_task.md  feature_request.md  user_story.md
.github/instructions/: *.instructions.md
.github/workflows/: auto-archive.yaml  backport.yaml  build-and-release.yaml  build-docker.yaml  build.yaml  docs-deploy.yaml  docs.yaml  hugo-deploy.yaml  pr-checks.yaml  proctor-pr.yaml  release-tagging.yaml  release.yaml  sentintel-pr.yaml  server-build.yaml  server-pr.yaml
.woodpecker/: auto-archive.yaml
cicd/compose/: .env  Caddyfile  Caddyfile.dev  compose.apps.yaml  compose.aptly.yaml  compose.dev.yaml  compose.glitchtip.yaml  compose.postgres.yaml  compose.proxy.yaml  deploy.sh  docker-compose.yaml  r.sh  setup.sh
cicd/k8s/: config-map.yaml
continuations/: openspec-speccing-plan.md  proctor-runtime-config.md
db/: docker-compose.yaml
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
hugo/: .gitignore  default.nix  go.mod  hugo.yaml
hugo/content/: _index.de.md  _index.en.md  (+1 more)
instructor-client/: default.nix
ios/: .gitignore  .swiftformat  .swiftlint.yml  apollo-codegen-config.json  default.nix  dict.md
k8s/: 04-deployment-server.yaml  06-deployment-proctor.yaml  07-ingress.yaml  config-map.yaml  deployment-hugo.yaml  deployment-postgres.yaml  deployment-proctor.yaml  deployment-server.yaml  ingress.yaml  namespace.yaml  secrets.yaml.template  volume-claims.yaml
openspec/: config.yaml
proctor/: .env  .env.development  .gitignore  .licensee.json  .prettierrc.json  AGENTS.md  README.md  default.nix  eslint.config.ts  index.html  package-lock.json  package.json  rebase-plan.md  rewrite-fix.md  rewrite.md  vite.config.ts
protobuf/: buf.gen.yaml  buf.yaml  common.proto  envelope.proto
scripts/: aur-deploy.sh  deploy.sh  fr-local-deploy-docker.sh  franver.sh  franver2.sh  obs-deploy.sh  sprint-stats.sh  test-obs-deploy.sh
sentinel/: .env  .env.dev  .gitignore  Cargo.toml  default.nix  deny.toml  report.json  spec.md
sentinel/.cargo/: config.toml
sentinel/aur/franklyn-bin/: .SRCINFO  LICENSE  PKGBUILD
sentinel/aur/franklyn-bin-dev/: .SRCINFO  PKGBUILD  franklyn-sentinel.desktop
sentinel/config/: default.toml  dev.toml  prod.toml
sentinel/obs/: _service  franklyn-sentinel.spec.in
sentinel/packaging/appimage/: build.sh
sentinel/packaging/aur/: PKGBUILD
sentinel/packaging/opensuse/: franklyn-sentinel.desktop  franklyn.spec.in
sentinel/packaging/windows/: README.portable.txt  build.sh
sentinel/resources/: README.portable.txt  franklyn-sentinel.desktop
sentinel/src/: build.rs  config.rs  gui.rs  image_generator.rs  lib.rs  main.rs  oidc.rs  proto.rs  record.rs  recorder.rs  screen_capture.rs  telemetry.rs  util.rs  ws.rs  ws2.rs
sentinel/src/recorder/: mod.rs
sentinel/src/recorder_v3/: mod.rs
sentinel/src/video/: mod.rs  recorder.rs
server/: .editorconfig  .env  .gitignore  README.md  default.nix  pom.xml  sqlc.yaml
spec/: answers.md  answers4.md  answers5.md  folgefragen2.md  folgefragen3.md  fragen.md  fsd.md  prompt.md
(+743 files in other folders)
