[package]
name = "franklyn-sentinel"
version = "0.0.0"
edition = "2024"
license = "MIT"
build = "src/build.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
futures-util = "0.3.31"
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
openidconnect = "3.5.0"
native-tls = "0.2.18"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde_urlencoded = "0.7.1"
serde = { version="1.0.228", features = ["derive"] }
serde_json = "1.0.149"
static-toml = "1.3.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.4"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
webbrowser = "1.0.2"
xcap = "0.8.2"
clap = { version = "4.5.60", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"

[features]
default = []
test = []
dev = []
prod = []
staging = []

[lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
nursery = "warn"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(env, values("dev", "prod"))'] }
